--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.2",
+    "axios": "^1.7.2",
     "dom": "^0.0.3",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.2.13",
+    "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.24.0"
+    "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-router": "^6.24.0",
+    "react-router-dom": "^6.24.1",
+    "sonner": "^1.5.0",
+    "swiper": "^11.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
